--- a/DDA-2020.vcxproj.filters
+++ b/DDA-2020.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="Semantic.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Generation.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Error.h">
@@ -81,6 +84,9 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="Semantic.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Generation.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
